--- a/app/src/main/res/drawable/bottom_line.xml
+++ b/app/src/main/res/drawable/bottom_line.xml
@@ -9,6 +9,7 @@
 
     <item android:top="-2dp" android:right="-2dp" android:left="-2dp">
         <shape>
+            <corners android:radius="10dp" />
             <solid android:color="@android:color/transparent" />
             <stroke
                  android:width="1dp"
