--- a/app/src/main/res/layout/creators_card.xml
+++ b/app/src/main/res/layout/creators_card.xml
@@ -1,32 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:layout_margin="10dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:background="@color/transparent"
     app:cardCornerRadius="10dp">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ImageView
-            android:contentDescription="@string/creator_pic"
-            android:layout_width="170dp"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:padding="15dp"
             android:id="@+id/profilepic"
-            android:layout_alignParentStart="true"
-            android:adjustViewBounds="true"
-            android:src="@drawable/penguin" />
+        android:src="@drawable/ic_person_black_24dp"
+        app:civ_border_color="@color/white"
+        app:civ_border_width="1dp" />
         <LinearLayout
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_toEndOf="@id/profilepic"
-            android:background="@color/white"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="2dp">
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                app:cardCornerRadius="5dp">
 
             <TextView
+                android:padding="10dp"
+                android:textStyle="bold"
                 android:id="@+id/nome"
                 style="@style/AppTheme"
                 android:layout_width="match_parent"
@@ -34,24 +39,34 @@
                 android:layout_gravity="center"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
-                android:background="@drawable/bottom_line"
                 android:text="@string/username"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
+            </android.support.v7.widget.CardView>
 
-            <TextView
-                android:id="@+id/cargo"
-                style="@style/AppTheme"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginEnd="10dp"
-                android:layout_marginStart="10dp"
-                android:text="@string/creator"
-                android:textAlignment="center"
-                android:textColor="@color/grey_700"
-                android:textSize="18sp" />
+                android:layout_marginTop="5dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="3dp">
+
+                <TextView
+                    android:id="@+id/cargo"
+                    style="@style/AppTheme"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:padding="10dp"
+                    android:text="@string/creator"
+                    android:textAlignment="center"
+                    android:textColor="@color/grey_700"
+                    android:textSize="18sp" />
+            </android.support.v7.widget.CardView>
+
 
             <ImageButton
                 android:contentDescription="@string/linkedinbutton"
@@ -70,21 +85,4 @@
         </LinearLayout>
 
 
-    </RelativeLayout>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginStart="45dp"
-        app:cardCornerRadius="5dp"
-        app:cardElevation="5dp">
-
-
-    </android.support.v7.widget.CardView>
-
-
-</android.support.v7.widget.CardView>
+</LinearLayout>
