--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:animateLayoutChanges="true"
     android:layout_width="match_parent"
@@ -10,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -19,8 +21,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
-                android:background="@drawable/bottom_line"
-                android:backgroundTint="@color/black"
                 android:text="@string/criadores"
                 android:textAlignment="center"
                 android:textColor="@color/black"
@@ -28,6 +28,7 @@
                 android:textStyle="bold" />
 
             <android.support.v7.widget.RecyclerView
+                android:layout_gravity="center"
                 android:id="@+id/creatorsrecycler"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -48,8 +49,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="15dp"
-                android:background="@drawable/bottom_line"
-                android:backgroundTint="@color/black"
                 android:text="@string/refer_ncias"
                 android:textAlignment="center"
                 android:textColor="@color/black"
@@ -73,8 +72,6 @@
             <TextView
                 android:id="@+id/artiststitle"
                 android:layout_margin="15dp"
-                android:background="@drawable/bottom_line"
-                android:backgroundTint="@color/black"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="26sp"
@@ -103,30 +100,31 @@
                 android:id="@+id/suportitle"
                 android:layout_width="match_parent"
                 android:layout_margin="15dp"
-                android:background="@drawable/bottom_line"
                 android:textAlignment="center"
                 android:text="@string/suporte"
                 android:textSize="24sp"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:id="@+id/helpad"
-                style="@style/AppTheme"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:animateLayoutChanges="true"
-                android:drawableStart="@drawable/ic_favorite_black_24dp"
-                android:text="@string/suporrt_ad"
-                android:textSize="20sp" />
+                android:padding="2dp"
+                app:cardCornerRadius="10dp">
 
-        </LinearLayout>
-        <LinearLayout
-            android:elevation="2dp"
-            android:padding="5dp"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/helpad"
+                    style="@style/AppTheme"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:animateLayoutChanges="true"
+                    android:drawableStart="@drawable/ic_favorite_black_24dp"
+                    android:text="@string/suporrt_ad"
+                    android:textSize="20sp" />
+            </android.support.v7.widget.CardView>
+
+
             <TextView
                 android:textColor="@color/grey_600"
 
