--- a/app/src/main/res/layout/pics.xml
+++ b/app/src/main/res/layout/pics.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="1dp"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="1dp"
     android:orientation="vertical">
 
     <ImageView
@@ -9,7 +13,6 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_margin="2dp"
         android:adjustViewBounds="true"
         android:contentDescription="@string/icon_info"
         android:hapticFeedbackEnabled="true"
@@ -33,5 +36,5 @@
         android:text="Erro ao encontrar ícone"
         android:textColor="@color/red_300"
         android:visibility="gone" />
-</LinearLayout>
+</android.support.v7.widget.CardView>
 
