--- a/app/src/main/res/layout/politics.xml
+++ b/app/src/main/res/layout/politics.xml
@@ -7,7 +7,6 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
         android:background="@drawable/round">
 
         <LinearLayout
@@ -19,7 +18,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Políticas do aplicativo"
+                android:text="Nossas políticas"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="28sp" />
@@ -28,15 +27,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@drawable/round"
                 android:backgroundTint="@color/grey_100"
                 android:orientation="vertical"
                 android:padding="10dp">
 
                 <TextView
+                    android:textColor="@color/grey_800"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/bottom_line"
                     android:text="@string/policyusetitle"
                     android:textSize="24sp" />
 
@@ -51,7 +49,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:background="@drawable/round"
                 android:backgroundTint="@color/grey_100"
 
                 android:orientation="vertical"
@@ -60,7 +57,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/bottom_line"
                     android:text="@string/privacypolicytitle"
                     android:textSize="24sp" />
 
