--- a/app/src/main/res/layout/profilepicselect_.xml
+++ b/app/src/main/res/layout/profilepicselect_.xml
@@ -1,42 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/removepic"
-        android:drawableEnd="@drawable/delete"
-        android:textColor="@color/red_400"
-        android:textAlignment="center"
-        android:text="@string/remover_foto_de_perfil"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
     <ProgressBar
+        android:layout_height="500dp"
+        android:padding="150dp"
         android:id="@+id/pb"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:visibility="gone"
         android:indeterminate="true"
-        android:indeterminateTint="@color/colorPrimary"
-        android:visibility="gone" />
-
+        android:indeterminateTint="@color/colorPrimary" />
     <TextView
+        android:layout_height="500dp"
+        android:gravity="center"
         android:id="@+id/message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:textSize="24sp"
         android:text="@string/foto_atualizada"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="12sp"
         android:visibility="gone" />
-<android.support.v7.widget.RecyclerView
-    android:layout_marginTop="5dp"
-     android:id="@+id/picsrecycler"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/back"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardCornerRadius="15dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="2dp"
+                    android:backgroundTint="@color/black"
+                    android:padding="5dp"
+                    android:text="Selecione um ícone de perfil"
+                    android:textSize="22sp"
+                    android:textStyle="bold" />
 
 
-</android.support.v7.widget.RecyclerView>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/picsrecycler"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="5dp"
+                    android:nestedScrollingEnabled="false" />
 
-</LinearLayout>
+                <Button
+                    android:id="@+id/removepic"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button"
+                    android:backgroundTint="@color/black"
+                    android:text="@string/remover_foto_de_perfil"
+                    android:textColor="@color/white"
+                    android:textSize="12sp" />
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+    </LinearLayout>
+
+
+</android.support.v4.widget.NestedScrollView>
