--- a/app/src/main/res/layout/references_layout.xml
+++ b/app/src/main/res/layout/references_layout.xml
@@ -1,13 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:background="@drawable/bottom_line"
-    android:backgroundTint="@color/black"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
-    android:elevation="2dp"
-    android:layout_height="wrap_content">
+    android:layout_height="60dp"
+    android:layout_margin="5dp"
+    android:elevation="4dp"
+    android:orientation="horizontal"
+    app:cardCornerRadius="10dp">
+
+    <LinearLayout
+        android:id="@+id/randomcolors"
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        android:orientation="horizontal" />
   <TextView
-      android:layout_gravity="center"
       android:id="@+id/reference"
       android:fontFamily="serif"
       android:padding="10dp"
@@ -17,4 +25,4 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
