--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -1,55 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/namelayout"
+<android.support.v7.widget.AlertDialogLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/inputlayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-
-            android:foregroundTint="@color/colorPrimaryDark"
-            android:hint="@string/username"
-            android:textColorHint="@color/colorPrimaryDark">
-
-
-            <EditText
-                android:labelFor="@id/inputlayout"
-                android:id="@+id/username"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/transparent"
-                android:drawablePadding="10dp"
-                android:drawableStart="@drawable/ic_person_black_24dp"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textColorHint="@color/colorPrimaryDark"
-                android:textSize="16sp"
-                android:inputType="textCapWords" />
-        </android.support.design.widget.TextInputLayout>
-
-        <Button
-            android:id="@+id/changename"
-            style="@style/FirebaseUI.Button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            android:text="@string/alterar"
-            android:textColor="@color/white" />
-    </LinearLayout>
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="25dp">
 
     <LinearLayout
         android:id="@+id/saving"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone">
 
@@ -65,18 +25,56 @@
             android:layout_height="wrap_content"
             android:text="@string/salvando"
             android:textAlignment="center"
-            android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textColor="@color/white"
+            android:textSize="26sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/namelayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/round"
+        android:orientation="vertical">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/inputlayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/round"
+            android:backgroundTint="@color/lwhite"
+            android:hint="@string/username"
+            android:textColorHint="@color/colorPrimaryDark"
+            app:counterMaxLength="10">
+
+
+            <EditText
+                android:id="@+id/username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/transparent"
+                android:drawablePadding="10dp"
+                android:drawableStart="@drawable/ic_person_black_24dp"
+                android:inputType="textCapWords"
+                android:labelFor="@id/inputlayout"
+                android:maxLength="10"
+                android:textAlignment="center"
+                android:textColor="@color/black"
+                android:textColorHint="@color/colorPrimaryDark"
+                android:textSize="12sp" />
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/changename"
+            style="@style/FirebaseUI.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="50dp"
+            android:layout_marginStart="50dp"
+            android:backgroundTint="@color/transparent"
+            android:text="@string/alterar"
+            android:textColor="@color/black" />
     </LinearLayout>
 
 
-</LinearLayout>
-
-
-
-
-
-
-
-
-
+</android.support.v7.widget.AlertDialogLayout>
